--- a/pages/indexDetail/indexDetail.wxss
+++ b/pages/indexDetail/indexDetail.wxss
@@ -186,9 +186,21 @@ view{
 	margin-top:50rpx;
 	position:absolute;
 	bottom:0;
+	border-top:solid 1px #e0e0e0;
 }
 .house_show{
-	position:relative;
+	position:fixed;
 	width:100%;
-	min-height:100%;
+	background:#fff;
 }
+.sildeIn{
+	transition:all 1s;
+	height:95%;
+	poition:absolute;
+	top:5%;
+}
+.slideOut{
+	transition:all 1s;
+	transform:translateY(100%);
+}
+
