--- a/app.wxss
+++ b/app.wxss
@@ -84,4 +84,13 @@ page{
 	background:#bb212e;
 	border:none;
 }
-
+.mask{
+	width:100%;
+	height:100%;
+	overflow:hidden;
+	background:rgba(0,0,0,0.6);
+	position:absolute;
+	top:0;
+	left:0;
+	transition:all 2s;
+}
