--- a/pages/houseOrder/houseOrder.wxss
+++ b/pages/houseOrder/houseOrder.wxss
@@ -118,9 +118,10 @@ view{
 .select_discount{
 	width:100%;
 	background:#fff;
-	height:0;
 	overflow:hidden;
-	position:absolute;
+	position:fixed;
+	height:600rpx;
+	bottom:-600rpx;
 }
 .close{
 	height:80rpx;
@@ -134,13 +135,11 @@ view{
 }
 .sildeIn{
 	transition:all 1s;
-	transform:translateY(-600rpx);
-	height:100%;
-
+	transform:translateY(-100%);
 }
 .slideOut{
 	transition:all 1s;
-	transform:translateY(450rpx);
+	transform:translateY(100%);
 	height:0;
 
 }
