--- a/app.wxss
+++ b/app.wxss
@@ -22,7 +22,7 @@ page{
 	align-items:center;
 }
 .avoidOverflow{
-	overflow-y:hidden;
+	overflow:hidden;
 	text-overflow:ellipsis;
 	white-space:nowrap;
 }
